--- a/gb/19/10/5/n11569991.md
+++ b/gb/19/10/5/n11569991.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>汪志远：全民反共反迫害开始了</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/190426121648100699-600x400.jpg" />
 <h6>2019年4月25日，纪念“四二五”和平上访二十周年研讨会在美国国会举办。“追查国际”主席汪志远在现场播放了取证录音。（林乐予/大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年10月05日讯】10月1日是十一国殇日70周年，追查迫害<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>国际组织主席汪志远在法轮功反迫害20周年<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>集会上录音发言说，在中国大陆有三亿四千多万民众宣布<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>（退出中共的党、团、队组织）与中共决裂。在海外以美中贸易战为代表的全球去共排共大潮迅猛地掀起等，都表明全民反共反迫害开始了。</p>
+<p>【大纪元2019年10月05日讯】10月1日是十一国殇日70周年，追查迫害<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>国际组织主席汪志远在法轮功反迫害20周年<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>集会上录音发言说，在中国大陆有三亿四千多万民众宣布<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>（退出中共的党、团、队组织）与中共决裂。在海外以美中贸易战为代表的全球去共排共大潮迅猛地掀起等，都表明全民反共反迫害开始了。</p>
 <p>以下为汪志远先生的发言全文：</p>
 <p>中共是全人类的公敌！全民反共反迫害开始了！</p>
 <p>事实告诉我们，中共绝不是一个理性正常的组织、政党，而是由一群犯下反人类罪行的犯罪分子操控的超级国家犯罪集团。它的思维逻辑和行事原则是反人类的，其罪行是人类从没有的邪恶罪行。</p>
 <p>自中共成立以来，从来没有停止过对中国人的杀戮，据估计，中共导致大约8,000万中国人非正常死亡，超过了两次世界大战死亡人数的总和。</p>
-<p>中共对<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的迫害，是中共几十年来对中国人迫害的延续。据明慧网报导，1999年7.20以来，通过民间途径能够传出消息的已有4,316名法轮功学员被迫害致死。每个所谓的敏感日，都有中共大规模的迫害。例如，4.25、7.20、10.1国殇日，中共大肆绑架骚扰法轮功学员。近2个月中共在长春、松原、吉林市绑架法轮功学员共127人，黑龙江绑架137人，四川省214人。8.15一天，仅长春市就绑架29人。</p>
-<p>在<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>所谓一国两制的环境下，公然操控员警、黑社会施暴全民。9月24日，香港法轮功学员廖秋兰在光天化日下，突遭两名蒙面黑衣人用棍棒攻击头部，顿时头破血流，血溅四周，场面触目惊心。</p>
+<p>中共对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的迫害，是中共几十年来对中国人迫害的延续。据明慧网报导，1999年7.20以来，通过民间途径能够传出消息的已有4,316名法轮功学员被迫害致死。每个所谓的敏感日，都有中共大规模的迫害。例如，4.25、7.20、10.1国殇日，中共大肆绑架骚扰法轮功学员。近2个月中共在长春、松原、吉林市绑架法轮功学员共127人，黑龙江绑架137人，四川省214人。8.15一天，仅长春市就绑架29人。</p>
+<p>在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>所谓一国两制的环境下，公然操控员警、黑社会施暴全民。9月24日，香港法轮功学员廖秋兰在光天化日下，突遭两名蒙面黑衣人用棍棒攻击头部，顿时头破血流，血溅四周，场面触目惊心。</p>
 <p>追查国际强烈谴责中共黑手对香港法轮功学员施暴，谴责中共对香港市民自由与基本人权的肆意践踏。本组织已经对此事件，列为重点追查案例，必将追查到底，誓将涉案凶手和中共幕后的黑手，送上法庭绳之以法！</p>
 <p>特别是，中共大量活摘法轮功学员器官的罪恶，超越了人类有史以来的任何犯罪，是这个星球上从未有过的邪恶。中共通过洗脑和暴利操控了如此庞大的人群，将他们的人性彻底地毁灭了，用魔性替代，白衣天使变成了杀人魔鬼。过程中是在彻底地毁灭着人类道德良知。他们不仅残害法轮功学员，也危害全社会。</p>
 <p>可以说，中共是全人类的公敌！每个与中共邪魔同在的人都处于危险之中。这是一场对全人类道德良知的摧毁，是中共主导的国家犯罪，反人类罪！</p>
 <p>另一方面，中共已处在全世界反共去共的汪洋大海中，全民反中共迫害开始了！</p>
-<p>在中国大陆，三亿四千多万民众不畏强权宣布<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>，与中共决裂。</p>
+<p>在中国大陆，三亿四千多万民众不畏强权宣布<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>，与中共决裂。</p>
 <p>在海外，近年来以美中贸易战为代表的全球去共排共大潮迅猛地掀起，而且，一浪高过一浪。是因为中共在全世界的渗透和威胁，已经引起了国际社会的震惊和反击。</p>
-<p>在香港6.16<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">反送中</a>的200万人游行抗议活动，将去共排共的活动推向了一个高潮！而且，在那么短的时，700万人口就有200万人勇敢地站出来反中共，反映了反共反迫害的民意已经到了，全社会一触即发的地步。</p>
+<p>在香港6.16<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">反送中</a>的200万人游行抗议活动，将去共排共的活动推向了一个高潮！而且，在那么短的时，700万人口就有200万人勇敢地站出来反中共，反映了反共反迫害的民意已经到了，全社会一触即发的地步。</p>
 <p>紧接着，2019年6月17日，“独立人民法庭”在伦敦的终审判决，判定中共政府对以法轮功学员为主的群体大规模活摘器官，无可置疑地犯有危害人类罪以及酷刑罪。从法律的层面，给中共定了罪。法庭还认定，中共治下的政府是一个犯罪政权。那就意味着与中共合作就涉嫌有同谋犯罪。</p>
 <p>9月24日，川普在联合国大会上严厉批评中共。9月25日美国参、众议院外交委员会分别通过了《香港人权与民主法案》。这些都表明：全民反共反迫害开始了。</p>
 <p>呼吁全球收集中共的罪证，为大审判做好准备。</p>
@@ -32,38 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/10/5/n11569920.md#1">易蓉：退党大潮为中华民族带来新生曙光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/5/n11569920.md#1">易蓉：退党大潮为中华民族带来新生曙光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615245.md#1">遭指涉违国安法 国际人权专家夏博义离港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614870.md#1">【图解】铁链女穿破盛世浮华</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611204.md#1">河北优秀新闻工作者陈星伯陷冤狱 几近失明</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613579.md#1">人权律师群关注“铁链女”案 要求彻查真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614227.md#1">徐州公安局被投诉涉嫌包庇人贩子集团</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613282.md#1">人权律师余文生出狱 回到北京与妻子团聚</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611084.md#1">中国人权律师团发声明 要求彻查“铁链女”案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609791.md#1">为自由 山东父子穿越南美热带雨林大逃亡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md#1">美国会研讨会关注3亿人三退为世界带来希望</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/11/n10382324.md#1">新西兰政要：摆脱中共 中国才会真正强大</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/7/n9936116.md#1" target="_blank">林辉：误信周恩来  南开创始人郁郁而终</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">【细语人生】见证大法的神奇（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948100.md#1">【现场视频】富士康上千工人维权 遭警驱赶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947713.md#1">【热点互动】海外华人回国“避疫”引热议</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/5/n11569991.htm">汪志远：全民反共反迫害开始了</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/5/n11569991.htm">汪志远：全民反共反迫害开始了</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/19/10/5/n11569991.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/10/5/n11569991.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
